{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 135,
  "lineage": "543eabcf-003c-e314-7eae-51012c8f0f66",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944708576171:security-group/sg-02c8789c2b69453a1",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c8789c2b69453a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev-eks-allow-all",
            "name_prefix": "",
            "owner_id": "944708576171",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-sg",
              "env": "dev"
            },
            "tags_all": {
              "Name": "dev-sg",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ee072577583b891"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iam.aws_iam_policy.cluster_CloudWatchMetric",
            "module.iam.aws_iam_policy.cluster_autoscalling",
            "module.iam.aws_iam_role.iam_role",
            "module.iam.aws_iam_role_policy_attachment.iam_role_policy_attachment",
            "module.iam.aws_iam_role_policy_attachment.iam_role_policy_attachment_AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.iam_role_policy_attachment_Cloudwatchpermissions",
            "module.iam.aws_iam_role_policy_attachment.iam_role_policy_attachment_ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.iam_role_policy_attachment_EKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.iam_role_policy_attachment_EKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.iam_role_policy_attachment_autoscalling",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw_k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0895507efa8795764",
            "domain": "vpc",
            "id": "eipalloc-0895507efa8795764",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-200-68-114.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.68.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-k8s-ngw",
              "env": "dev",
              "project": "dev"
            },
            "tags_all": {
              "Name": "dev-k8s-ngw",
              "env": "dev",
              "project": "dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944708576171:internet-gateway/igw-0bca0a88d53dda45f",
            "id": "igw-0bca0a88d53dda45f",
            "owner_id": "944708576171",
            "tags": {
              "Name": "dev-k8s-igw",
              "env": "dev",
              "project": "dev"
            },
            "tags_all": {
              "Name": "dev-k8s-igw",
              "env": "dev",
              "project": "dev"
            },
            "vpc_id": "vpc-00ee072577583b891"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0895507efa8795764",
            "association_id": "eipassoc-0cd3a3b6c0ca499bd",
            "connectivity_type": "public",
            "id": "nat-098153c646c95919e",
            "network_interface_id": "eni-022d6e98bb8a2c066",
            "private_ip": "10.10.117.189",
            "public_ip": "13.200.68.114",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0821579ba7ded420e",
            "tags": {
              "Name": "dev-k8s-ngw",
              "env": "dev",
              "project": "dev"
            },
            "tags_all": {
              "Name": "dev-k8s-ngw",
              "env": "dev",
              "project": "dev"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw_k8s",
            "module.vpc.aws_internet_gateway.igw_k8s",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944708576171:route-table/rtb-08f201fd59f7fb66f",
            "id": "rtb-08f201fd59f7fb66f",
            "owner_id": "944708576171",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-098153c646c95919e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-routerable",
              "env": "dev",
              "project": "dev"
            },
            "tags_all": {
              "Name": "dev-private-routerable",
              "env": "dev",
              "project": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ee072577583b891"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.ngw_k8s",
            "module.vpc.aws_internet_gateway.igw_k8s",
            "module.vpc.aws_nat_gateway.ngw_k8s",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944708576171:route-table/rtb-045b7e8a7698b1c7e",
            "id": "rtb-045b7e8a7698b1c7e",
            "owner_id": "944708576171",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bca0a88d53dda45f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-routerable",
              "env": "dev",
              "project": "dev"
            },
            "tags_all": {
              "Name": "dev-public-routerable",
              "env": "dev",
              "project": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ee072577583b891"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_k8s",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0731755578d358b37",
            "route_table_id": "rtb-08f201fd59f7fb66f",
            "subnet_id": "subnet-0a7eaebf7283b4673"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw_k8s",
            "module.vpc.aws_internet_gateway.igw_k8s",
            "module.vpc.aws_nat_gateway.ngw_k8s",
            "module.vpc.aws_route_table.route_table_private",
            "module.vpc.aws_subnet.private_subnet_1a",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_private_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07573cbda4ad80c5b",
            "route_table_id": "rtb-08f201fd59f7fb66f",
            "subnet_id": "subnet-0bb9f8014c241d829"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw_k8s",
            "module.vpc.aws_internet_gateway.igw_k8s",
            "module.vpc.aws_nat_gateway.ngw_k8s",
            "module.vpc.aws_route_table.route_table_private",
            "module.vpc.aws_subnet.private_subnet_1b",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec47fbcb3a6151c1",
            "route_table_id": "rtb-08f201fd59f7fb66f",
            "subnet_id": "subnet-0bbdb2a17fac0de64"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw_k8s",
            "module.vpc.aws_internet_gateway.igw_k8s",
            "module.vpc.aws_nat_gateway.ngw_k8s",
            "module.vpc.aws_route_table.route_table_private",
            "module.vpc.aws_subnet.private_subnet_1c",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022e06c6a7dd0b7e6",
            "route_table_id": "rtb-045b7e8a7698b1c7e",
            "subnet_id": "subnet-0821579ba7ded420e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_k8s",
            "module.vpc.aws_route_table.route_table_public",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce73603f25459dc0",
            "route_table_id": "rtb-045b7e8a7698b1c7e",
            "subnet_id": "subnet-0b0df2f3ce7b78784"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_k8s",
            "module.vpc.aws_route_table.route_table_public",
            "module.vpc.aws_subnet.public_subnet_1b",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b09613a3f26d920",
            "route_table_id": "rtb-045b7e8a7698b1c7e",
            "subnet_id": "subnet-0d2d9ad72acde8842"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_k8s",
            "module.vpc.aws_route_table.route_table_public",
            "module.vpc.aws_subnet.public_subnet_1c",
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944708576171:subnet/subnet-0a7eaebf7283b4673",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7eaebf7283b4673",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944708576171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet-1a",
              "env": "dev",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "dev"
            },
            "tags_all": {
              "Name": "dev-private-subnet-1a",
              "env": "dev",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "dev"
            },
            "vpc_id": "vpc-00ee072577583b891"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944708576171:subnet/subnet-0bb9f8014c241d829",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb9f8014c241d829",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944708576171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet-1b",
              "env": "dev",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "dev"
            },
            "tags_all": {
              "Name": "dev-private-subnet-1b",
              "env": "dev",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "dev"
            },
            "vpc_id": "vpc-00ee072577583b891"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944708576171:subnet/subnet-0bbdb2a17fac0de64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbdb2a17fac0de64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "944708576171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private-subnet-1c",
              "env": "dev",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "dev"
            },
            "tags_all": {
              "Name": "dev-private-subnet-1c",
              "env": "dev",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "project": "dev"
            },
            "vpc_id": "vpc-00ee072577583b891"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944708576171:subnet/subnet-0821579ba7ded420e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0821579ba7ded420e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "944708576171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet-1a",
              "env": "dev",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "dev"
            },
            "tags_all": {
              "Name": "dev-public-subnet-1a",
              "env": "dev",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "dev"
            },
            "vpc_id": "vpc-00ee072577583b891"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944708576171:subnet/subnet-0b0df2f3ce7b78784",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0df2f3ce7b78784",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "944708576171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet-1b",
              "env": "dev",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "dev"
            },
            "tags_all": {
              "Name": "dev-public-subnet-1b",
              "env": "dev",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "dev"
            },
            "vpc_id": "vpc-00ee072577583b891"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944708576171:subnet/subnet-0d2d9ad72acde8842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2d9ad72acde8842",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "944708576171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-subnet-1c",
              "env": "dev",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "dev"
            },
            "tags_all": {
              "Name": "dev-public-subnet-1c",
              "env": "dev",
              "kubernetes.io/cluster/dev-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "project": "dev"
            },
            "vpc_id": "vpc-00ee072577583b891"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_k8s"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:944708576171:vpc/vpc-00ee072577583b891",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-039628f5ee0b7d081",
            "default_route_table_id": "rtb-08d4fbd4f1777e663",
            "default_security_group_id": "sg-06ebe0f83521e7a7b",
            "dhcp_options_id": "dopt-03e787b76b561be8a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ee072577583b891",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d4fbd4f1777e663",
            "owner_id": "944708576171",
            "tags": {
              "Name": "dev-vpc-k8s",
              "env": "dev",
              "project": "dev"
            },
            "tags_all": {
              "Name": "dev-vpc-k8s",
              "env": "dev",
              "project": "dev"
            }
          }
        }
      ]
    }
  ]
}